# Svunes

./: CHANGELOG.md  README.md  bun.lockb  crowdin.yml  index.html  latest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_request.md
.github/in-progress-workflows/: release.yml
.github/workflows/: candidate-release.yml  release.yml
.github/workflows/create-release-assets/: action.yml
build-resources/: appimage-installer.sh  appimage-uninstaller.sh  linux-installer.sh  linux-uninstaller.sh
src/: App.svelte  app.css  main.html  routes.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json  popout.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  audio_controller.rs  common.rs  desktop_audio_controller.rs  header.rs  image_utils.rs  lib.rs  logger.rs  main.rs  mpa_reader.rs  music_readers.rs  music_writers.rs  watcher.rs
src-tauri/src/playback/: adjustments.rs  audio.rs  balance.rs  equalizer.rs  ipc.rs  mod.rs  output.rs  player.rs  resampler.rs  types.rs
src-tauri/src/symphonia_mock/: header.rs  mod.rs  mpa_reader.rs
src-tauri/wix/: short-license.txt
src/components/: Content.svelte  ContextMenu.svelte  SelectHeader.svelte  Titlebar.svelte
src/components/animations/: animations.ts
src/components/desktop/: DesktopSpeakerSelect.svelte  DesktopViewWrapper.svelte  DesktopVolumeControls.svelte  LandscapeSelectHeader.svelte  NowPlayingDesktop.svelte  SidePanelBackButton.svelte  SidePanelRouter.svelte
src/components/icons/: ArrowRight.svelte  Artist.svelte  Close.svelte  Home.svelte  IconBase.svelte
src/components/interactables/: Button.svelte  Checkbox.svelte  Chip.svelte  ChipChooser.svelte  ColorPicker.svelte  ColoredButton.svelte  FAB.svelte  FilledIconButton.svelte  IconButton.svelte  MenuButton.svelte  NumberField.svelte  PlayButton.svelte  ProgressIndicator.svelte  RadioInput.svelte  RadioMenuItem.svelte  SearchField.svelte  Select.svelte  SelectOption.svelte  Slider.svelte  TextField.svelte  Toggle.svelte  ToggleShuffleButton.svelte  VerticalSlider.svelte  index.ts
src/components/layout/: BottomSheet.svelte  Card.svelte  CardClickable.svelte  Divider.svelte  Lazy.svelte  ListItem.svelte  ListItemButton.svelte  Marquee.svelte  MenuItem.svelte  Pane.svelte  ScrollableContainer.svelte  SectionLabel.svelte  TabsHeader.svelte  Tooltip.svelte  ViewHeader.svelte  VirtualGrid.svelte  VirtualList.svelte  index.ts
src/components/modals/: AddEqualizer.svelte  AddProfile.svelte  AdvancedSearchFilters.svelte  ArtOptions.svelte  BlacklistFolders.svelte  (+16 more)
src/lib/: icons.ts  md-defs.js  md-defs.ts
src/routes/: MetadataParser.svelte  Search.svelte
src/stores/: ContextMenu.ts  Desktop.ts  Dialog.ts  Layout.ts  Locale.ts  Modals.ts  Navigation.ts  Overlays.ts  Popout.ts  Search.ts  Select.ts  Settings.ts  State.ts
src/types/: MetadataParser.ts  MusicBrainz.ts  Settings.ts  SleepTimer.ts  View.ts  global.d.ts
src/windows/: shared.css
(+325 files in other folders)
